@@ -1,4 +1,5 @@
 [master]
+    - Fix for bug #1276: OO styles do not consider editor fields anymore for sorting
 2.11 beta 3
     - New MacOSX integration
     - Two releases for MacOSX: OSX-Java6 for Apple Java 1.6 and OSX for Oracle Java 1.7+
